syntax = "proto3";

package puntosventa;

service PuntoVentaService {
  rpc GetPuntosVentaByIds (GetPuntosVentaByIdsRequest) returns (GetPuntosVentaByIdsResponse);
  rpc GetOrdenesByUserId(GetOrdenesByUserIdRequest) returns (GetOrdenesByUserIdResponse);
}

// Solicitud: El servicio admin envía el ID del usuario.
message GetOrdenesByUserIdRequest {
  int32 usuario_id = 1;
}

// Respuesta: El servicio clientes devuelve un array de IDs de productos únicos.
message GetOrdenesByUserIdResponse {
  repeated int32 productos_ids = 1;
}

message GetPuntosVentaByIdsRequest {
  repeated int32 ids = 1;
}

message PuntoVenta {
  int32 id = 1;
  string nombre = 2;
  string tipo = 3;         // "fisico" | "online"
  string direccion = 4;    // ...
}

message GetPuntosVentaByIdsResponse {
  repeated PuntoVenta puntos_venta = 1;
}
